[gd_scene load_steps=22 format=2]

[ext_resource path="res://Data/Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Data/Scripts/InteractionRaycast.gd" type="Script" id=2]
[ext_resource path="res://Data/Scenes/UI/Hotbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Data/Scenes/UI/InventoryMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Data/Scripts/InteractionLayer.gd" type="Script" id=5]
[ext_resource path="res://Data/Scripts/UI.gd" type="Script" id=6]
[ext_resource path="res://Data/Scenes/UI/DragPreview.tscn" type="PackedScene" id=7]
[ext_resource path="res://Data/Scenes/UI/Tooltip.tscn" type="PackedScene" id=8]
[ext_resource path="res://Data/Scenes/PlayerChar/Grip.gd" type="Script" id=9]
[ext_resource path="res://Data/Scenes/Items/Weapons/Sword_1h.tscn" type="PackedScene" id=10]

[sub_resource type="CapsuleShape" id=1]
radius = 0.190515
height = 0.438041

[sub_resource type="ShaderMaterial" id=6]

[sub_resource type="CylinderMesh" id=4]
material = SubResource( 6 )

[sub_resource type="SpatialMaterial" id=7]

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.0976387, 0.507403, -1.19696 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 2.59405, 91.0776, 84.2043 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "thrust_sword_1h"
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.06, 0.316, -0.346 ), Vector3( -0.0601339, 0.429369, -1.59198 ), Vector3( 0.0390443, 0.335776, -0.563345 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 3.70111, 91.4842, 98.6498 ), Vector3( 3.70111, 91.4842, 98.6498 ), Vector3( 5.43789, 93.0411, 127.49 ) ]
}

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="CapsuleMesh" id=3]
material = SubResource( 8 )

[sub_resource type="SpatialMaterial" id=9]

[sub_resource type="Theme" id=10]

[sub_resource type="Theme" id=11]
Button/colors/font_color = Color( 0, 1, 0.0862745, 1 )
Button/styles/hover = null

[node name="Player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 2, 0, 0, 0, -8.74228e-08, -2, 0, 2, -8.74228e-08, 0, 0.505266, -0.0383236 )
shape = SubResource( 1 )

[node name="Pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.995, 0.143 )

[node name="Camera_1st" type="Camera" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.117897, -0.218457 )
far = 1432.5

[node name="InteractionRay" type="RayCast" parent="Pivot/Camera_1st"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.117897, 0 )
enabled = true
cast_to = Vector3( 0, -0.001, -4.427 )
collision_mask = 3
script = ExtResource( 2 )

[node name="Promt" type="Label" parent="Pivot/Camera_1st/InteractionRay"]
margin_left = 939.0
margin_top = 713.0
margin_right = 1031.0
margin_bottom = 727.0
text = "PLACEHOLDER"

[node name="Nose" type="MeshInstance" parent="Pivot/Camera_1st"]
transform = Transform( -0.067, 0, 0, 0, -0.00579085, 0.0459842, 0, -0.220924, -0.00120534, -0.0423166, -0.152681, -0.124376 )
mesh = SubResource( 4 )
skeleton = NodePath("../../../Appearance")
material/0 = SubResource( 7 )

[node name="Weapon" type="Spatial" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.153, 0.65, -0.676 )

[node name="Grip" type="BoneAttachment" parent="Pivot/Weapon"]
transform = Transform( 0.994789, -0.0268579, -0.0983582, 0.0354968, 0.995562, 0.0871614, 0.0955806, -0.0901986, 0.991327, 0.25506, -1.21097, 0.55305 )
bone_name = "grip"
script = ExtResource( 9 )

[node name="Sword_1h" parent="Pivot/Weapon/Grip" instance=ExtResource( 10 )]
transform = Transform( 0.0129363, 0.00698378, 0.299639, 0.298161, 0.0302633, -0.0135778, -0.0305431, 0.298388, -0.00563597, 0.0976387, 0.507403, -1.19696 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Pivot/Weapon/Grip/Sword_1h"]
anims/RESET = SubResource( 12 )
anims/thrust_sword_1h = SubResource( 13 )

[node name="Camera_3rd" type="ClippedCamera" parent="Pivot"]
transform = Transform( 1, 0, 0, 0, 0.937203, 0.348785, 0, -0.348785, 0.937203, -0.0445608, 2.64375, 7.41831 )
fov = 61.0

[node name="Appearance" type="MeshInstance" parent="."]
transform = Transform( 0.4, 0, 0, 0, -0.00913776, 0.49987, 0, -0.399896, -0.0114222, -0.0290444, 0.551751, -0.0259961 )
mesh = SubResource( 3 )
material/0 = SubResource( 9 )

[node name="Control" type="Control" parent="."]
margin_left = 3.0
margin_top = -6.0
margin_right = 1921.0
margin_bottom = 1074.0
mouse_filter = 2

[node name="InteractionText" type="Label" parent="Control"]
margin_left = 788.0
margin_top = 710.0
margin_right = 1172.0
margin_bottom = 826.0
text = "\"E\" to interact  "
align = 1
valign = 1

[node name="DEBUG" type="Label" parent="Control"]
margin_left = 1630.0
margin_top = 23.0
margin_right = 1930.1
margin_bottom = 249.0
rect_scale = Vector2( 2.735, 2.628 )
text = "DEBUG MODE
"

[node name="StatusText" type="Label" parent="Control"]
visible = false
margin_left = 923.0
margin_top = 584.0
margin_right = 1472.0
margin_bottom = 819.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "This is realy disgusting.
"

[node name="InfoLayer" type="Label" parent="Control"]
visible = false
margin_left = 863.0
margin_top = 130.0
margin_right = 1043.0
margin_bottom = 150.0
rect_scale = Vector2( 2.539, 2.532 )
text = "PLACEHOLDER INFOLAYER"

[node name="Timer" type="Timer" parent="Control/InfoLayer"]

[node name="UIRoot" type="Control" parent="."]
margin_left = 3.0
margin_top = -6.0
margin_right = 1921.0
margin_bottom = 1074.0
mouse_filter = 2

[node name="UI" type="CanvasLayer" parent="UIRoot"]
script = ExtResource( 6 )

[node name="Hotbar" parent="UIRoot/UI" instance=ExtResource( 3 )]
columns = 8

[node name="InventoryMenu" parent="UIRoot/UI" instance=ExtResource( 4 )]
columns = 8

[node name="DragPreview" parent="UIRoot/UI" instance=ExtResource( 7 )]

[node name="Tooltip" parent="UIRoot/UI" instance=ExtResource( 8 )]

[node name="IntractionLayer" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="InteractionDialogue" type="ColorRect" parent="IntractionLayer"]
visible = false
margin_left = 661.0
margin_top = 430.0
margin_right = 1296.0
margin_bottom = 691.0
theme = SubResource( 10 )
color = Color( 0, 0, 0, 1 )

[node name="InteractionDialogueText" type="RichTextLabel" parent="IntractionLayer/InteractionDialogue"]
margin_left = 52.0
margin_top = 35.0
margin_right = 562.0
margin_bottom = 184.0
text = "123"

[node name="nah" type="Button" parent="IntractionLayer/InteractionDialogue"]
margin_left = 328.0
margin_top = 171.0
margin_right = 457.0
margin_bottom = 235.0
text = "Leave"

[node name="ye" type="Button" parent="IntractionLayer/InteractionDialogue"]
margin_left = 125.0
margin_top = 172.0
margin_right = 256.0
margin_bottom = 235.0
theme = SubResource( 11 )
text = "ye"

[connection signal="timeout" from="Control/InfoLayer/Timer" to="IntractionLayer" method="_on_Timer_timeout"]
[connection signal="pressed" from="IntractionLayer/InteractionDialogue/nah" to="IntractionLayer" method="_on_nah_pressed"]
[connection signal="pressed" from="IntractionLayer/InteractionDialogue/ye" to="IntractionLayer" method="_on_ye_pressed" binds= [ "body", "target" ]]
